# multilingual-sentence-embeddings

./: .gitignore  README.md  pyproject.toml
scripts/: evaluate.py  train.py
src/mse/evaluation/: metrics.py
src/mse/models/: base.py  student.py  teacher.py
src/mse/training/: config.py  distillation_trainer.py
tests/models/: test_base.py
tests/training/: test_distillation_trainer.py
